# PdfIntelligence

./: .gitignore  LICENSE  README.md  app.py  models.py  pyproject.toml  requirements.txt
attached_assets/: Pasted-Develop-a-full-stack-application-that-allows-users-to-upload-PDF-documents-and-ask-questions-regardi-1746816778264.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  qa.html  upload.html
utils/: gemini_direct.py  llama_index_helper.py  pdf_processor.py
